add images in html file

--- a/index.html
+++ b/index.html
@@ -13,19 +13,36 @@
     </header>
     <main>
       <section class="images">
-        <div class="player-image"></div>
-        <div class="computer-image"></div>
+        <div class="player-image">
+          <img
+            src="./assets/images/paper.png"
+            alt="player-image"
+            width="200px"
+            height="200px"
+          />
+        </div>
+        <div class="computer-image">
+          <img
+            src="./assets/images/paper.png"
+            alt="player-image"
+            width="200px"
+            height="200px"
+          />
+        </div>
       </section>
-      <section class="score-card"></section>
+      <section class="score-card">
+        <div>Player <span class="result-score">0</span></div>
+        <div>Computer <span class="result-score">0</span></div>
+      </section>
       <section class="buttons" id="button-type">
         <div>
-          <input class="choices" id="rock" type="button" value="Rock" />
+          <input class="choices" id="rock" type="button" value="rock" />
         </div>
         <div>
-          <input class="choices" id="paper" type="button" value="Paper" />
+          <input class="choices" id="paper" type="button" value="paper" />
         </div>
         <div>
-          <input class="choices" id="scissors" type="button" value="Scissors" />
+          <input class="choices" id="scissors" type="button" value="scissors" />
         </div>
       </section>
     </main>
