--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
       <h1>Rock Paper Scissors</h1>
     </header>
     <main>
-      <section class="images">
-        <div class="player-image">
-          <img
-            src="./assets/images/paper.png"
-            alt="player-image"
-            width="200px"
-            height="200px"
-          />
-        </div>
-        <div class="computer-image">
-          <img
-            src="./assets/images/paper.png"
-            alt="player-image"
-            width="200px"
-            height="200px"
-          />
-        </div>
+      <section id="images">
+        <img
+          src="./assets/images/paper.png"
+          alt="player-image"
+          width="200px"
+          height="200px"
+        />
+
+        <img
+          src="./assets/images/paper.png"
+          alt="player-image"
+          width="200px"
+          height="200px"
+        />
       </section>
-      <section class="score-card">
-        <div>Player <span class="result-score">0</span></div>
-        <div>Computer <span class="result-score">0</span></div>
+      <section id="score-card">
+        <p>Select any option to play the game</p>
+        <section id="score">
+          <div>Player <span class="result-score">0</span></div>
+          <div>Computer <span class="result-score">0</span></div>
+        </section>
       </section>
       <section class="buttons" id="button-type">
         <div>
